feat(user-service): Define openapi contract
